--- a/sass/theme/_blog-page_theme.scss
+++ b/sass/theme/_blog-page_theme.scss
@@ -48,11 +48,17 @@
         justify-content: center;
     }
 
+    .fluid-width-video-wrapper {
+        margin-top: -56.25%!important;
+        position: static;
+    }
+
     iframe {
         width: 100%!important;
         height: calc((100vw - 50px) * 9 /16)!important;
         @media (min-width: 768px) {
             height: calc((800px - 50px) * 9 /16)!important;
+            max-height: 343px;
         }
     }
 
